# cuadre_caja

./: dev.wolfang.cuadre_caja.json  meson.build
data/: dev.wolfang.cuadre_caja.appdata.xml.in  dev.wolfang.cuadre_caja.desktop.in  dev.wolfang.cuadre_caja.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: cuadre_caja.gresource.xml  cuadre_caja.in  main.py  meson.build  window.py  window.ui
